<?xml version="1.0" encoding="utf-8"?>
<!--activity_history.xml
Contains the layout for the history
Created by: Jessie Pusateri
Created on: 3/6/15
Last Modified by: Jessie Pusateri
Last Modified on: 3/6/15
Assignment/Project: A290 Android Development Final
Part of: A290Final, Contains the layout for the history-->
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/HistoryTableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="*"
    android:stretchColumns="*">
    <TableRow
        android:id="@+id/tableRowTitle"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_horizontal">
    </TableRow>
    <TableRow
        android:id="@+id/tableRowHeaders"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/TextViewEmpty"
            android:gravity="center_horizontal"
            android:text="@string/NumberLabel"
            android:textSize="20sp" >

		</TextView>

        <TextView
            android:id="@+id/TableGuess"
            android:gravity="center_horizontal"
            android:text="@string/TableGuess"
            android:textSize="20sp"
            android:textStyle="bold"
             >

</TextView>

        <TextView
            android:id="@+id/TableActual"
            android:gravity="center_horizontal"
            android:text="@string/TableActual"
            android:textSize="20sp"
            android:textStyle="bold"
             >

</TextView>

        <TextView
            android:id="@+id/TableDifference"
            android:gravity="center_horizontal"
            android:text="@string/TableDifference"
            android:textSize="20sp"
            android:textStyle="bold"
             >

</TextView>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        
        <TextView
            android:id="@+id/TableEntry1"
            android:gravity="center"
            android:text="@string/TableEntry1"
            android:textSize="20sp"
            android:textStyle="bold" >

</TextView>
        
    </TableRow>
    <TableRow
        android:layout_height="wrap_content"
        android:id="@+id/tableRow2"
        android:layout_width="match_parent">
        
        <TextView
            android:id="@+id/TableEntry2"
            android:gravity="center_horizontal"
            android:text="@string/TableEntry2"
            android:textSize="20sp"
            android:textStyle="bold" >

</TextView>
        
    </TableRow>
   <TableRow
        android:layout_height="wrap_content"
        android:id="@+id/tableRow3"
        android:layout_width="match_parent">
        
        <TextView
            android:id="@+id/TableEntry3"
            android:gravity="center_horizontal"
            android:text="@string/TableEntry3"
            android:textSize="20sp"
            android:textStyle="bold" >

</TextView>
       
    </TableRow>
  	<TableRow
        android:layout_height="wrap_content"
        android:id="@+id/tableRow4"
        android:layout_width="match_parent">
        
        <TextView
            android:id="@+id/TableEntry4"
            android:gravity="center_horizontal"
            android:text="@string/TableEntry4"
            android:textSize="20sp"
            android:textStyle="bold" >

</TextView>
  	    
    </TableRow>
    <TableRow
        android:layout_height="wrap_content"
        android:id="@+id/tableRow5"
        android:layout_width="match_parent">
        
        <TextView
            android:id="@+id/TableEntry5"
            android:gravity="center_horizontal"
            android:text="@string/TableEntry5"
            android:textSize="20sp"
            android:textStyle="bold" >

</TextView>
        
    </TableRow>
</TableLayout>