<?xml version="1.0" encoding="utf-8"?>
<!--activity_guess_results.xml
Contains the layout for the guess results
Created by: Jessie Pusateri
Created on: 3/6/15
Last Modified by: Jessie Pusateri
Last Modified on: 3/6/15
Assignment/Project: A290 Android Development Final
Part of: A290Final, Contains the layout for the guess results-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/ResultsLinearLayout"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/GuessLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="35dp"
        android:text="@string/GuessLabel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/Guess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PlaceholderLabel"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/ActualTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ActualTimeLabel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/ActualTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PlaceholderLabel"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />
    
    <TextView
        android:id="@+id/DifferenceTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DifferenceTimeLabel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/Difference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="35dp"
        android:text="@string/PlaceholderLabel"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />
    
     <Button
        android:id="@+id/MainMenuButton"
        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MainMenuButtonLabel" />
    
    <Button
        android:id="@+id/HistoryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/HistoryButtonLabel" />

</LinearLayout>
